--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 
         .input-text {
             /* Applied font-light (300) and italic to Public Sans */
+            font-size: 12px;
             font-weight: 300;
             font-style: italic;
         }
